--- a/views/css/painel.css
+++ b/views/css/painel.css
@@ -1,34 +1,275 @@
-.form-white.input-group>.form-control:focus {
-    border-color: #fff;
-    box-shadow: inset 0 0 0 1px #fff;
-  }
-  
-  .navbar-dark .navbar-nav .nav-link {
-    color: #fff;
-  }
-  
-  .navbar-dark .navbar-nav .nav-link:hover,
-  .navbar-dark .navbar-nav .nav-link:focus {
-    color: rgba(255, 255, 255, 0.75);
-  }
+body{
+	background-color:#fcfcfc;
+}
 
-  .navbar{
-    border-width: thin;
-    border-bottom: 2px solid #0602006b;
-    margin-bottom: 0.1rem !important;
-  }
+.mt-4{
+	margin-top: 0.25rem !important;
+}
 
-/* CSS DOS ELEMENTOS DENTRO DA NAVBAR */
-  .navbar-content {
-    display: flex;
-    justify-content: space-between;
+.navbar{
+	border-width: thin;
+	border-bottom: 1px solid #0602006b;
+	margin-bottom: 0.2rem !important;
+}
+
+.navbar img{
+	width: 420px;
+    padding-left: 20px;
+}
+
+.navbar li{
+	margin-top: 20px;
+	list-style: none;
+}
+
+.navbar a{
+	color:#071e51;
+	font-size:15px;
+}
+
+.navbar a:hover{
+	color:#244181;
+	
+}
+
+
+.nav{
+	background-color:#f4f4f4 !important;
+}
+
+.nav a{
+	color:#071e51;
+	font-size:14px;
+	font-weight: bold;
+}
+
+.nav .active{
+	background-color:#739bc1 !important;
+}
+
+
+
+.card{
+	width:280px;
+	border-radius:10px;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+	margin:0 auto;
+
+}
+
+.card-body{
+	padding-bottom:2px !important;
+	padding-top:10px !important;
+}
+
+.card p{
+	margin:0;
+	padding:0;
+
+}
+
+.icone-card{
+	font-size:70px;
+}
+
+.titulo-card{
+	font-size:15px;
+	text-align:right;
+
+}
+
+.subtitulo-card{
+	font-size:40px;
+	text-align:right;
+}
+
+.rodape-card{
+	font-size:13px;
+	text-align:center;
+
+}
+
+
+.badge{
+	background-color:#4A4A4A !important;
+	color:#FFF;
+
+}
+
+
+.nav .active .badge{
+	background-color:#FFF !important;
+	color:#2C2B2B !important;
+}
+
+
+.btn-secondary{
+	background-color:#878787 !important;
+}
+
+.btn-secondary:hover{
+	background-color:#616161 !important;
+}
+
+
+.registro{
+	font-size:15px;
+	margin-right:5px;
+}
+
+
+.botao-novo{
+	margin-bottom:35px;
+}
+
+
+.paginacao{
+	margin-top:25px;
+}
+
+
+.mensagem-sucesso{
+	font-size:16px;
+	color:#4c7438;
+	text-align:center;
+}
+
+
+.mensagem-erro{
+	font-size:16px;
+	color:#a94659;
+	text-align:center;
+}
+
+.tabelas{
+	font-size:14px;
+}
+
+
+.quadro{
+	width:250px;
+}
+
+.quadro .btn-success{
+	width:60px;
+	color:white;
+}
+
+.quadro .btn-danger{
+	width:60px;
+	color:white;
+}
+
+.quadro .btn-success:hover{
+	
+	color:#dedede;
+}
+
+.quadro .btn-danger:hover{
+	
+	color:#dedede;
+}
+
+
+.totalpago{
+	font-size:14px;
+	margin-top: 10px;
+	margin-right:55px;
+}
+
+
+
+.alertas{
+	position:absolute;
+    bottom:0;
+    height:50px;
+    text-align:center;
+    padding-top:10px;
+}
+
+
+
+
+.botao-link {
+    border: 0;
+    padding: 0;
+    display: inline;
+    background: none;
+    text-decoration: underline;
+    color: blue;
+}
+.botao-link:hover {
+    cursor: pointer;
+}
+
+
+
+.container-tela{
+	margin-left:5px;
+	margin-right:5px;
+}
+
+
+
+.container-tela-chamadas{
+  margin-top:100px;
+  
+}
+
+
+
+.card-adm{
+	margin-top:30px;
+}
+
+.table .thead-light th {
+    color: #ffffff;
+    background-color: #739bc1;
+    border-color: #dee2e6;
+}
+
+/* Estilos para o footer */
+.relative-footer {
+    bottom: 0;
+	position: relative;
+    left: 0;
+	font-size:  16 px;
     width: 100%;
+    background-color: #739bc1;
+    padding-bottom: 4px;
+	padding-top: 5px;
+	font-weight: bold;
+	color: white;
 }
 
-.content-img {
-    flex: 1; /* Isso faz a logo ocupar todo o espaço disponível à esquerda */
+.fixed-footer {
+	position: absolute;
+	font-size:  16 px;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+	color: white;
+    background-color: #739bc1;
+    padding-bottom: 4px;
+	padding-top: 5px;
+	font-weight: bold;
 }
 
-.content-dropdown{
-  margin-right: 1.0rem;
+.footer .container {
+    text-align: center;
 }
+
+.footer .container .row {
+    justify-content: space-between;
+}
+
+.footer a {
+    color: #333;
+    text-decoration: none;
+}
+
+.footer a:hover {
+    text-decoration: underline;
+}
+
+
